--- a/labs/lab 3/Lab3-starter-main/server/package.json
+++ b/labs/lab 3/Lab3-starter-main/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9"
   }
 }
